# squirrel

./: .flake8  .gitignore  README.md  brownie-config.yaml  pyproject.toml
contracts/: squirrel.sol
scripts/: deploy.py
