[tool.poetry]
name = "squirrel"
version = "0.1.0"
description = "Proxy smart contract to do cool things Squeeth related"
authors = ["SwissQuant <rico@nemo.ventures>"]

[tool.poetry.dependencies]
python = "3.10.8"
eth-brownie = "^1.19.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
